knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Data_Type__c/fields/pqcrush__Color__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Color__c</fullName>
    <description>Color in the form of #RRGGBB (example: #FF0000 for red)</description>
    <inlineHelpText>Color in the form of #RRGGBB (example: #FF0000 for red)</inlineHelpText>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>