knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Data_Type__c/fields/pqcrush__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Data_Type__c</fullName>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
                <default>true</default>
                <label>Picklist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>