knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Data_Type__c/fields/pqcrush__Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Picklist_Values__c</fullName>
    <description>Possible values for the picklist</description>
    <inlineHelpText>Enter values, with each value separated by a new line</inlineHelpText>
    <label>Picklist Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>