knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Data_Type__c/fields/pqcrush__White_Space__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__White_Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>White Space</label>
    <referenceTo>pqcrush__White_Space__c</referenceTo>
    <relationshipLabel>Cross-Sell Data Types</relationshipLabel>
    <relationshipName>Cross_Sell_Data_Types</relationshipName>
    <type>Lookup</type>
</CustomField>