knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Data_Type__c/validationRules/pqcrush__Picklist_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__Picklist_Values</fullName>
    <active>true</active>
    <description>If field type is picklist then the picklist value field cannot be empty</description>
    <errorConditionFormula>ISPICKVAL(pqcrush__Data_Type__c, &apos;Picklist&apos;) &amp;&amp; ISBLANK( pqcrush__Picklist_Values__c )</errorConditionFormula>
    <errorDisplayField>pqcrush__Picklist_Values__c</errorDisplayField>
    <errorMessage>Picklist Data Types must have Picklist Values</errorMessage>
</ValidationRule>